...
            }.toolbar {
                ToolbarItem(placement: .topBarTrailing) {
                    Button {
                        isAddTaskPresented.toggle()
                    } label: {
                        Image(systemName: "plus")
                    }.accessibilityLabel(Text("Add task")).sheet(isPresented: $isAddTaskPresented, content: {
                        AddTask()
                    })
                }
            }.navigationTitle("I'm doing it")
                .overlay {
                    if StuffNotDone.isEmpty == true && StuffDone.isEmpty {
...
